--- a/css/style.css
+++ b/css/style.css
@@ -53,13 +53,14 @@ body{
   display: flex;
   align-items: center;
   height: 80px;
+  overflow: hidden;
 }
 .menu-btn{
   display: none;
 }
 .nav-container .logo{
   display: flex;
-  height: 100%;
+  max-height: 100%;
   width: auto;
   align-items: center;
   justify-content: center;
@@ -70,7 +71,6 @@ body{
   max-height: 80px;
   width: auto;
 }
-
 .search-container{
   display: flex;
   justify-content: center;
@@ -133,7 +133,7 @@ body{
   justify-content: center;
   height: 100%;
   width: 40px;
-  transition: transform 0.3s ease;
+  transition: transform 0.2s ease;
   cursor: pointer;
 }
 .nav-buttons .cart-icon img{
@@ -236,7 +236,6 @@ body{
   z-index: 99;
 }
 .footer{
-  border: 2px solid red;
   width: 100%;
   display: flex;
   justify-content: space-between;
@@ -283,8 +282,8 @@ body{
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
-  gap: 20px;
-  width: 50%;
+  gap: 40px;
+  width: 60%;
 }
 .footer-content h4{
   font-size: 22px;
