--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,7 @@
       "YTLC" 500;
   }
 
-  /*body styles*/
+/*body styles*/
 body{
   font-family: "Nunito Sans", serif;
   background-color: #F7F5EF;
@@ -27,7 +27,7 @@ body{
   width: 100%;
   height:100%;
 }
-/*header*/
+/*header styles*/
 .header{
   position: fixed;
   top: 0;
@@ -35,6 +35,7 @@ body{
   width: 100%;
   z-index: 2;
 }
+/*promo bar section styles*/
 .promo-bar{
   background-color: #7A6145;
   display: flex;
@@ -42,6 +43,7 @@ body{
   color: #F7F5EF;
   padding: 10px;
 }
+/*navbar section styles*/
 .navbar{
   display: flex;
   flex-direction: column;
@@ -235,6 +237,7 @@ body{
   display: block;
   z-index: 99;
 }
+/*footer section styles*/
 .footer{
   width: 100%;
   display: flex;
@@ -306,4 +309,76 @@ body{
 .footer-content li a:hover{
   transform: translateY(-3px) translateX(-5px);
   text-decoration: underline;
+}
+
+/*INDEX.HTML STYLES*/
+.main-content{
+  padding-top: 180px;
+}
+/*hero section styles*/
+.hero{
+  position: relative;
+  display: flex;
+  align-items: flex-start;
+  justify-content: space-between;
+  background: url('../images/others/hero-image.png') no-repeat center center;
+  background-size: cover;
+  width: 100%;
+  height:80vh; /*full viewport height*/
+  color: #FFFFFF;
+}
+.hero-text{
+  position: absolute;
+  left: 5%;
+  text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
+}
+.hero-text h1{
+  font-size: 56px;
+  font-weight:bold;
+  margin-bottom: 10px;
+  max-width: 300px;
+}
+.hero-text p{
+  font-size: 24px;
+  margin-bottom: 50px;
+}
+.cta-button {
+  padding: 14px 26px;
+  font-size: 14px;
+  font-weight: 600;
+  color: #000000;
+  background-color: #FFFFFF;
+  box-shadow: inset 0 0 0 0 #00000012;
+  border: none;
+  transition: ease-out 0.4s;
+  outline: none;
+}
+.cta-button:hover {
+  box-shadow: inset 250px 0 0 0 #00000012;
+  background-color: transparent;
+  border: 1px solid #FFFFFF;
+  color: #FFFFFF;
+}
+.prev-button, .next-button {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  background: #7a6145a5;
+  color: #FFFFFF;
+  border: none;
+  font-size: 30px;
+  padding: 30px 15px;
+  cursor: pointer;
+  transition: 0.3s;
+}
+.prev-button {
+  left: 0;
+  display: none;
+}
+.next-button {
+  right: 0;
+  display: none;
+}
+.prev-button:hover, .next-button:hover {
+  background: rgba(0, 0, 0, 0.8);
 }
