--- a/css/style.css
+++ b/css/style.css
@@ -310,6 +310,22 @@ body{
   transform: translateY(-3px) translateX(-5px);
   text-decoration: underline;
 }
+/*registration popup styles section*/
+.popup-overlay{
+  display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.4);
+    z-index: 2;
+    transition: opacity 0.3s ease;
+}
+.popup-overlay.show{
+  display: block;
+  opacity: 1;
+}
 #registrationPopup{
   display: none;
   position: fixed;
@@ -321,44 +337,45 @@ body{
   height: 80%;;
   background-color: #FFFFFF;
   border-radius: 20px;
-  padding:  40px;
+  padding:  20px 40px 40px 40px;
   box-shadow: 0px 4px  10px rgba(0, 0, 0, 0,2);
+  opacity: 0;
+  transform: translate(-50%, -60%) scale(0.8);
+  transition: opacity 0.3s ease, transform 0.3s ease;
 }
-.popup-content{
+#registrationPopup.show {
+  display: block;
+  opacity: 1;
+  transform: translate(-50%, -50%) scale(1); /* End with normal scale */
+}
+.popup-container{
   position: relative;
 }
 .popup-logo img{
   display: block;
   height: 100%;
-  max-height: 120px;
+  max-height: 100px;
   width: auto;
 }
 .close-button{
   position: absolute;
-  top: 10px;
+  top: 20px;
   right: 15px;
   font-size: 26px;
   color: #7A6145;
   cursor: pointer;
 }
-.form{
-  display: none;
-  padding: 30px 20px 30px 20px;
-}
-.form.active{
-  display: block;
-}
 .popup-header{
   display: flex;
   align-items: flex-start;
-  padding: 10px 20px 0 0;
+  padding: 0px 20px 0 0;
   border-bottom: 2px solid #00000030;
   gap: 30px;
 }
 .popup-header button{
   background: none;
   border: none;
-  font-size: 24px;
+  font-size: 20px;
   font-weight: 600;
   padding: 10px;
   cursor: pointer;
@@ -367,7 +384,64 @@ body{
   font-weight: 600;
   border-bottom: 3px solid #7A6145;
 }
-
+.popup-content{
+  display: flex;
+  flex-direction: row;
+  gap: 10px;
+}
+.popup-fields{
+  display: flex;
+  flex-direction: column;
+  flex: 1.2;
+}
+.form{
+  display: none;
+  padding: 20px;
+}
+.form.active{
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+.form.active input{
+  width: 100%;
+  padding: 10px;
+  border-radius: 10px;
+  margin-bottom: 5px;
+}
+.form button, .social-login button{
+  border: none;
+  background-color: #7A6145;
+  color: #FFFFFF;
+  font-weight: 500;
+  width: 100%;
+  height: auto;
+  padding: 10px;
+  border-radius: 10px;
+}
+.social-login{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 0 20px;
+  gap: 10px;
+}
+.social-login p{
+  margin-bottom: 10px;
+}
+.discount-code {
+  flex: 0.8;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-top: 20px;
+}
+.discount-code img{
+  width: 100%;
+  border-radius: 20px;
+  max-height: 450px;
+  object-fit: cover;
+}
 /*INDEX.HTML STYLES*/
 .main-content{
   padding-top: 180px;
