--- a/css/style.css
+++ b/css/style.css
@@ -65,12 +65,11 @@ body{
   width: auto;
   align-items: center;
   justify-content: center;
-  overflow: hidden;
 }
 .nav-container .logo img{
   display: block;
   height: 100%;
-  max-height: 80px;
+  max-height: 78px;
   width: auto;
 }
 .search-container{
@@ -122,7 +121,7 @@ body{
   display: none;
   justify-content: space-between;
 }
-.profile-container {
+.profile-container{
   position: relative;
   display: flex;
   align-items: center;
@@ -131,7 +130,7 @@ body{
   width: 100%;
   cursor: pointer;
 }
-.user-dropdown {
+.user-dropdown{
   position: absolute;
   top: 100%;
   right: 0;
@@ -143,15 +142,15 @@ body{
   min-width: 150px;
   z-index: 2;
 }
-.user-dropdown li {
+.user-dropdown li{
   padding: 14px;
   text-align: left;
 }
-.user-dropdown li:hover {
+.user-dropdown li:hover{
   background-color: rgba(95, 74, 52, 0.1);
   cursor: pointer;
 }
-.user-dropdown a {
+.user-dropdown a{
   text-decoration: none;
   color: #000000;
   font-size:16px;
@@ -166,7 +165,7 @@ body{
   padding: 12px 20px;
   transition: all 0.3s ease-in-out;
 }
-.sell-button:hover {
+.sell-button:hover{
   background-color: #F7F5EF; /* Swap background */
   color: #7A6145; /* Swap text color */
   border: 2px solid #7A6145; /* Add subtle border */
@@ -226,7 +225,7 @@ body{
 .nav-links .link, li{
   position: relative;
 }
-.nav-links .link::after {
+.nav-links .link::after{
   content: "";
   position: absolute;
   left: 0;
@@ -237,8 +236,7 @@ body{
   transform: scaleX(0);
   transition: transform 0.3s ease;
 }
-
-.nav-links .link:hover::after {
+.nav-links .link:hover::after{
   transform: scaleX(1);
 }
 .nav-links li a{
@@ -520,7 +518,7 @@ body{
   font-size: 24px;
   margin-bottom: 50px;
 }
-.cta-button {
+.cta-button{
   padding: 14px 26px;
   font-size: 14px;
   font-weight: 600;
@@ -531,13 +529,13 @@ body{
   transition: ease-out 0.4s;
   outline: none;
 }
-.cta-button:hover {
+.cta-button:hover{
   box-shadow: inset 250px 0 0 0 #00000012;
   background-color: transparent;
   border: 1px solid #FFFFFF;
   color: #FFFFFF;
 }
-.prev-button, .next-button {
+.prev-button, .next-button{
   position: absolute;
   top: 50%;
   transform: translateY(-50%);
@@ -549,14 +547,65 @@ body{
   cursor: pointer;
   transition: 0.3s;
 }
-.prev-button {
+.prev-button{
   left: 0;
   display: none;
 }
-.next-button {
+.next-button{
   right: 0;
   display: none;
 }
-.prev-button:hover, .next-button:hover {
+.prev-button:hover, .next-button:hover{
   background: rgba(0, 0, 0, 0.8);
+}
+/*top cateogies section styles*/
+.top-categories{
+  display: flex;
+  flex-direction: column;
+  padding: 40px;
+  margin-top: 100px;
+}
+.top-categories h2{
+  font-size: 44px;
+  font-weight: 600;
+}
+.category-grid{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 26px;
+}
+.category{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  position: relative;
+  transition: transform 0.4s ease, box-shadow 0.4s ease;
+}
+.category a{
+  text-decoration: none;
+  color: #000000;
+}
+.category img:hover{
+  transform: translateY(-5px);
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2)
+}
+.category-name{
+  margin-top: 10px;
+  font-size: 20px;
+  font-weight: 600;
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+.category-name img{
+  height: 18px;
+  width: auto;
+  display: none;
+  transition: opacity 0.3s ease;
+}
+.category:hover .category-name img{
+  display: block;
+  opacity: 1;
 }
