--- a/css/style.css
+++ b/css/style.css
@@ -609,3 +609,67 @@ body{
   display: block;
   opacity: 1;
 }
+/*limited time offers section styles*/
+.limited-offers{
+  position: relative;
+  width: 100%;
+  height: 240px;
+  background: url("../images/others/limited-offers-bg.png") no-repeat center center/cover;
+}
+.limited-offers-overlay{
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: #7a614591;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+}
+.limited-offers-header{
+  color: #FFFFFF;
+  position: relative;
+  z-index: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: flex-start;
+  padding-left: 60px;
+}
+.limited-offers-header h2{
+  font-size: 50px;
+  font-weight: 600;
+  width: 80%;
+}
+.limited-offers-header p{
+  font-size: 20px;
+  margin-top: 10px;
+}
+.countdown{
+  width: 60%;
+  height: 50%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  padding-right: 30px;
+  gap: 30px;
+  margin-top: 15px;
+  color: #FFFFFF;
+}
+.time-box{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: 20px;
+  font-weight: bold;
+  background: rgba(255, 255, 255, 0.133);
+  padding: 10px 40px;
+  border-radius: 5px;
+  height: 100%;
+}
+.time-box span{
+  font-size: 30px;
+  font-weight: bold;
+}
