--- a/css/style.css
+++ b/css/style.css
@@ -292,7 +292,7 @@ body{
   background-color: #7A6145;
   color: #F7F5EF;
   padding: 60px 80px;
-  
+  margin-top: 80px;
 }
 .footer-left{
   display: flex;
@@ -563,7 +563,7 @@ body{
   display: flex;
   flex-direction: column;
   padding: 40px;
-  margin-top: 100px;
+  margin: 100px 0;
 }
 .top-categories h2{
   font-size: 44px;
@@ -729,4 +729,47 @@ body{
   background-color: transparent;
   border: 1px solid #FFFFFF;
   color:#FFFFFF;
+}
+.how-it-works{
+  margin-top: 120px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.how-it-works h2{
+  font-size: 44px;
+  font-weight: 600;
+}
+.how-it-works p{
+  margin-top: 20px;
+  font-size: 20px;
+  font-weight: 600;
+}
+.steps{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  margin: 40px;
+}
+.step{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 20px;
+}
+.step img{
+  width: 80px;
+  height: auto;
+}
+.step h4{
+  font-size: 22px;
+  font-weight: 600;
+  margin-top: 20px;
+}
+.step p{
+  font-size: 18px;
+  font-weight: 400;
+  text-align: center;
 }
