--- a/css/style.css
+++ b/css/style.css
@@ -784,3 +784,238 @@ body{
   font-weight: 400;
   text-align: center;
 }
+
+
+/*PRODUCT-DETAILS.HTML STYLES*/
+/*product container section styles*/
+.product-container{
+  display: flex;
+  width: 100%;
+  padding: 40px;
+}
+.product-container-left{
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+#breadcrumbNavigation, #breadcrumbNavigation a{
+  font-size: 18px;
+  font-weight: 500;
+  color: #000000;
+  text-decoration: none;
+}
+.product-gallery{
+  display: flex;
+  flex-direction: row-reverse;
+  justify-content: space-evenly;
+  align-items: center;
+}
+#mainImage{
+  max-width: 80%;
+  object-fit: cover;
+}
+.secondary-images{
+  height: 100%;
+  margin-right: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+}
+.secondary-images img{
+  width: 100%;
+  height: auto;
+  object-fit: cover;
+  cursor: pointer;
+  transition: transform 0.2s ease-in-out;
+}
+.secondary-images img:hover{
+  transform: scale(1.1);
+}
+.product-details{
+  flex: 1;
+  padding-left: 40px;
+}
+#productTitle{
+  font-size: 36px;
+  font-weight: 600;
+  margin-bottom: 10px;
+  color: #000000;
+}
+#productPrice{
+  font-size: 30px;
+  font-weight: 600;
+  color: #7A6145;
+  margin-bottom: 24px;
+}
+.details-container{
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  margin-bottom: 10px;
+  border-bottom: 1px solid #00000030;
+}
+.details-container h3, .description-container h3{
+  font-size: 20px;
+  font-weight: 600;
+  margin-bottom: 10px;
+}
+.details-grid{
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 10px 40px;
+  margin-top: 10px;
+}
+.details{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  font-size: 16px;
+}
+.details h4{
+  font-weight: 500;
+  color: #837F7F;
+  margin-bottom: 4px;
+}
+.details p{
+  margin-bottom: 10px;
+}
+.description-container{
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  margin-top: 10px;
+  border-bottom: 2px solid #00000030;
+}
+#productDescription {
+  font-size: 16px;
+  line-height: 1.5;
+  color: #000000;
+  margin-bottom: 10px;
+}
+.product-points{
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 20px;
+  margin-top: 10px;
+}
+.product-points img{
+  max-height: 40px;
+  width: auto;
+}
+.seller-profile{
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  padding: 15px;
+  margin-bottom: 20px;
+}
+.seller-profile h2{
+  color: #000000;
+  font-size: 24px;
+  font-weight: 600;
+  margin-bottom: 20px;
+}
+.seller-profile-container{
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  justify-content: space-between;
+  align-items: center;
+  padding-bottom: 20px;
+  border-bottom: 1px solid #000000;
+}
+.seller-profile-details{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 10px;
+}
+.seller-profile-details img{
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  margin-bottom: 10px;
+}
+.seller-information{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 2px;
+}
+#sellerUsername{
+  font-size: 16px;
+  font-weight: 600;
+}
+#sellerJoined{
+  font-size: 12px;
+  color: #000000;
+  font-weight: 300;
+}
+#contactSeller{
+  background-color: transparent;
+  border: 1px solid #7A6145;
+  padding: 10px 80px;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 14px;
+  transition: background-color 0.3s ease, color 0.3s ease;
+}
+#contactSeller:hover{
+  background-color: #5A4228;
+  color: #FFFFFF;
+}
+#addToCart{
+  display: block;
+  width: 100%;
+  background-color: #5A4228;
+  color: #FFFFFF;
+  text-align: center;
+  padding: 12px;
+  font-size: 16px;
+  font-weight: 500;
+  border-radius: 6px;
+  cursor: pointer;
+  margin-top: 10px;
+  border: 1px solid #7A6145;
+  transition: transform 0.3s ease;
+}
+#addToCart:hover{
+  transform: scale(1.01);
+}
+.seller-reviews{
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  padding: 40px;
+}
+.seller-reviews h2{
+  font-size: 24px;
+  font-weight: 600;
+  margin-bottom: 20px;
+}
+.review-form{
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: flex-end;
+  gap: 5px;
+  width:50%;
+}
+.review-form textarea{
+  background-color: #F7F5EF;
+  border-radius: 10px;
+  border: 1px solid #7A6145;
+  width: 100%;
+  padding:10px;
+}
+.review-form button{
+  border-radius: 20px;
+  border: none;
+  background-color: #7A6145;
+  color: #FFFFFF;
+  padding: 5px 20px;
+}
