--- a/css/style.css
+++ b/css/style.css
@@ -426,12 +426,11 @@ body{
   background: none;
   border: none;
   font-size: 20px;
-  font-weight: 600;
+  font-weight: 500;
   padding: 10px;
   cursor: pointer;
 }
 .popup-header .active{
-  font-weight: 600;
   border-bottom: 3px solid #7A6145;
 }
 .popup-content{
@@ -451,7 +450,7 @@ body{
 .form.active{
   display: flex;
   flex-direction: column;
-  gap: 10px;
+  gap: 5px;
 }
 .form.active input{
   width: 100%;
@@ -477,19 +476,18 @@ body{
   gap: 10px;
 }
 .social-login p{
-  margin-bottom: 10px;
+  margin-bottom: 5px;
 }
 .discount-code {
-  flex: 0.8;
   display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: flex-start;
   padding-top: 20px;
 }
 .discount-code img{
   width: 100%;
   border-radius: 20px;
-  max-height: 450px;
+  max-height: 420px;
   object-fit: cover;
 }
 /*INDEX.HTML STYLES*/
@@ -828,10 +826,10 @@ body{
   height: auto;
   object-fit: cover;
   cursor: pointer;
-  transition: transform 0.2s ease-in-out;
 }
+
 .secondary-images img:hover{
-  transform: scale(1.1);
+  border: 2px solid #7A6145;
 }
 .product-details{
   flex: 1;
@@ -858,7 +856,7 @@ body{
 }
 .details-container h3, .description-container h3{
   font-size: 20px;
-  font-weight: 600;
+  font-weight: 500;
   margin-bottom: 10px;
 }
 .details-grid{
@@ -900,23 +898,22 @@ body{
   flex-direction: row;
   align-items: center;
   gap: 20px;
-  margin-top: 10px;
+  padding: 20px 0;
 }
 .product-points img{
-  max-height: 40px;
+  max-height: 20px;
   width: auto;
 }
 .seller-profile{
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  padding: 15px;
-  margin-bottom: 20px;
+  margin-top: 20px;
 }
 .seller-profile h2{
   color: #000000;
   font-size: 24px;
-  font-weight: 600;
+  font-weight: 500;
   margin-bottom: 20px;
 }
 .seller-profile-container{
@@ -943,15 +940,15 @@ body{
 .seller-information{
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: flex-start;
   gap: 2px;
 }
 #sellerUsername{
-  font-size: 16px;
-  font-weight: 600;
+  font-size: 18px;
+  font-weight: 500;
 }
-#sellerJoined{
-  font-size: 12px;
+.seller-joined{
+  font-size: 14px;
   color: #000000;
   font-weight: 300;
 }
@@ -979,8 +976,7 @@ body{
   font-weight: 500;
   border-radius: 6px;
   cursor: pointer;
-  margin-top: 10px;
-  border: 1px solid #7A6145;
+  border: none;
   transition: transform 0.3s ease;
 }
 #addToCart:hover{
@@ -990,11 +986,11 @@ body{
   display: flex;
   flex-direction: column;
   width: 100%;
-  padding: 40px;
+  padding: 0 40px;
 }
 .seller-reviews h2{
   font-size: 24px;
-  font-weight: 600;
+  font-weight: 500;
   margin-bottom: 20px;
 }
 .review-form{
@@ -1018,4 +1014,76 @@ body{
   background-color: #7A6145;
   color: #FFFFFF;
   padding: 5px 20px;
+}
+.review{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: flex-start;
+  gap: 10px;
+  margin-top: 20px;
+}
+.profile-picture img{
+  width: 60px;
+  height: auto;
+}
+.review-details{
+  border: 2px solid red;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: center;
+}
+.review-username{
+  font-size: 16px;
+  font-weight: 600;
+}
+.review-date{
+  font-size: 14px;
+  font-weight: 400;
+}
+.review-content{
+  font-size: 16px;
+  font-weight: 500;
+}
+.similar-listings{
+  margin-top: 40px;
+  padding: 40px;
+}
+.similar-listings h2{
+  font-size: 44px;
+  font-weight: 600;
+  padding: 20px 0;
+  border-top: 1px solid #00000030;
+}
+.listings-container{
+  display: flex;
+  overflow-x: auto;
+  gap: 20px;
+}
+.listings-container::-webkit-scrollbar{
+  display: none;
+}
+.listing-card{
+  min-width: 400px;
+  height: auto;
+  padding: 15px;
+  text-align: left;
+}
+.listing-card img{
+  width: 100%;
+  height: auto;
+  object-fit: cover;
+}
+.listing-card .title{
+  font-size: 20px;
+  font-weight: 500;
+  color: #000000;
+  margin-top: 20px;
+}
+.listing-card .price{
+  font-size: 18px;
+  font-weight: 300;
+  color: #7A6145;
+  margin-top: 5px;
 }
