--- a/css/style.css
+++ b/css/style.css
@@ -110,6 +110,9 @@ body{
   font-size: 18px;
   font-weight: 700;
 }
+.nav-buttons a{
+  text-decoration: none;
+}
 #guestNav{
   width: 60%;
   display: flex;
@@ -1086,4 +1089,59 @@ body{
   font-weight: 300;
   color: #7A6145;
   margin-top: 5px;
+}
+
+/*LISTING.HTML STYLES*/
+h1 {
+  text-align: center;
+}
+.progress-bar {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 20px;
+}
+.step {
+  flex: 1;
+  text-align: center;
+  padding: 10px;
+  border-bottom: 3px solid #ccc;
+  color: #999;
+}
+.step.active {
+  border-bottom: 3px solid #8b5e3c;
+  color: #8b5e3c;
+}
+.section {
+  margin-bottom: 20px;
+}
+input, select, textarea, button {
+  display: block;
+  width: 100%;
+  margin-top: 5px;
+  padding: 10px;
+}
+#imagePreview {
+  display: flex;
+  gap: 10px;
+  flex-wrap: wrap;
+}
+.image-box {
+  position: relative;
+}
+.image-box img {
+  width: 70px;
+  height: 70px;
+  object-fit: cover;
+  border-radius: 5px;
+}
+.image-box button {
+  position: absolute;
+  top: -5px;
+  right: -5px;
+  background: red;
+  color: white;
+  border: none;
+  cursor: pointer;
+  font-size: 12px;
+  padding: 5px;
 }
